# reimagined-computing-machine

./: html-demo7.html  notebook.ipynb  pyproject.toml
