[tool.poetry]
name = "data-analytics"
version = "0.1.0"
description = ""
authors = ["Mikhail Liamets <m.liamets@jacobs-university.de>"]
readme = "README.md"
packages = [{include = "data_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
